--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" 
-        xmlns:tools="http://schemas.android.com/tools" 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        android:gravity="center"
-        android:background="@color/background">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/background"
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:padding="16dp">
+
     <LinearLayout
-        android:layout_width="381dp"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="70dp">
 
             <ImageView
                 android:id="@+id/imageViewIcon"
-                android:layout_width="70dp"
+                android:layout_width="111dp"
                 android:layout_height="70dp"
                 android:layout_alignParentTop="true" />
 
             <TextView
                 android:id="@+id/textViewWhite"
-                android:layout_width="50dp"
+                android:layout_width="20dp"
                 android:layout_height="wrap_content"
-                android:paddingLeft="150dp"/>
+                android:paddingLeft="150dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,8 +48,7 @@
                 <TextView
                     android:id="@+id/organizationNameText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Organizacion" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
 
@@ -61,20 +60,18 @@
             android:layout_height="wrap_content">
 
 
-
-
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:textColor="@color/colorPrimaryDark" 
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="160dp"
-                    android:text="@string/estimated_time" />
+                    android:text="@string/estimated_time"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/routeDuration"
@@ -99,21 +96,21 @@
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:textColor="@color/colorPrimaryDark" 
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="160dp"
-                    android:text="@string/length" />
+                    android:text="@string/length"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/routeLenght"
                     android:layout_width="90dp"
-                    android:textColor="@color/colorPrimaryDark"
                     android:layout_height="match_parent"
                     android:paddingLeft="30dp"
                     android:paddingRight="0dp"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -139,18 +136,18 @@
 
                 <TextView
                     android:id="@+id/textView14"
-                    android:textColor="@color/colorPrimaryDark" 
-                    android:textStyle="bold"
                     android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:text="Puntos" />
+                    android:text="Puntos"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView_orderedRouteText"
