--- a/app/src/main/res/layout/fragment_route_search.xml
+++ b/app/src/main/res/layout/fragment_route_search.xml
@@ -13,7 +13,7 @@
         android:id="@+id/btn_search"
         android:layout_width="200dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginBottom="60dp"
         android:text="@string/search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,22 +124,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.375"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="170dp"
+            android:layout_marginLeft="140dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinner_route_theme" />
 
     <Spinner
-            android:id="@+id/spinner_route_estimated_time"
-            android:layout_width="140dp"
-            android:layout_height="31dp"
-            android:entries="@array/estimated_times_of_route"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="50dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="43dp"
-            android:layout_marginLeft="170dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_length"/>
+        android:id="@+id/spinner_route_estimated_time"
+        android:layout_width="140dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="42dp"
+        android:entries="@array/estimated_times_of_route"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.628"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_route_length" />
 
     <TextView
             android:id="@+id/textview_minNumOfPOI"
@@ -215,10 +214,9 @@
 
     <TextView
         android:id="@+id/textView_orderedRoute"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="44dp"
+        style="@style/SmallTextView"
+        android:paddingStart="40dp"
+        android:layout_marginTop="50dp"
         android:text="@string/ordered_route"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_pointsEarnedCompletingRoute" />
@@ -227,12 +225,12 @@
         android:id="@+id/spinner_orderedRoute"
         android:layout_width="107dp"
         android:layout_height="23dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="36dp"
         android:entries="@array/ordered_route_choices"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.179"
-        app:layout_constraintStart_toEndOf="@+id/textView_orderedRoute"
+        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_minimumOfPoints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
