--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,11 +62,11 @@
                     android:src="@drawable/defaultprofile" />
 
                 <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="102dp"
-                        android:orientation="vertical"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="4dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    android:orientation="vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="4dp">
 
                     <LinearLayout
                             android:layout_width="match_parent"
@@ -87,12 +87,6 @@
                                     android:textColor="@color/colorPrimaryDark"
                                     android:textSize="18sp"
                                     android:textStyle="bold"/>
-
-                            <!--For the future
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="routes" /> -->
 
                         </LinearLayout>
 
@@ -147,12 +141,13 @@
 
                     <Button
                             android:id="@+id/buttonLogOut"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            app:backgroundTint="@color/colorPrimary"
+                            android:background="@color/colorPrimary"
                             style="@style/LargeButtonText"
-                            android:textColor="@color/white"/>
+                            android:layout_width="200dp"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginLeft="33dp"
+                            android:textColor="@color/white" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -166,6 +161,7 @@
 
                 <TextView
                     android:id="@+id/fullname"
+                    android:paddingStart="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -197,7 +193,7 @@
         android:layout_width="400dp"
         android:layout_height="300dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="285dp"
         android:layout_marginRight="40dp"
         android:orientation="vertical">
 
