--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
 
         tools:context=".login.OpeningActivity"
-        android:background="@drawable/geometrics_cut">
+        android:background="@drawable/geometrics_cut_opening">
 
     <TextView
             android:text="PASEICO"
