--- a/app/src/main/res/layout/fragment_marketplace.xml
+++ b/app/src/main/res/layout/fragment_marketplace.xml
@@ -20,10 +20,10 @@ tools:context=".ui.marketplace.marketplaceFragment">
         android:id="@+id/buttonMarketplaceDescuentos"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="100dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginRight="50dp"
         android:text="@string/discounts"
         app:backgroundTint="@color/colorPrimary"
@@ -32,6 +32,27 @@ tools:context=".ui.marketplace.marketplaceFragment">
         app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceName"
         style="@style/LargeButtonText"
         android:textColor="@color/white"/>
+
+    <!--<Button
+        android:id="@+id/button"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_marginTop="275dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos"
+        tools:layout_editor_absoluteX="0dp" />-->
 
     <TextView
         android:id="@+id/textView7"
@@ -112,23 +133,15 @@ tools:context=".ui.marketplace.marketplaceFragment">
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace6000" />
 
-    <Button
-        android:id="@+id/button"
-        android:background="@drawable/button_marketplace"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:layout_marginTop="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos"/>
-
-    <!--LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <View
-            android:layout_width="200dp"
+            android:layout_width="320dp"
             android:layout_height="38dp"
             android:layout_gravity="center"
-            android:layout_marginTop="145dp"
+            android:layout_marginTop="144dp"
             android:background="@color/white" />
     </LinearLayout>
 
@@ -137,21 +150,12 @@ tools:context=".ui.marketplace.marketplaceFragment">
         android:layout_height="match_parent"
         android:orientation="vertical">
         <View
-            android:layout_width="200dp"
+            android:layout_width="320dp"
             android:layout_height="38dp"
             android:layout_gravity="center"
-            android:layout_marginTop="400dp"
+            android:layout_marginTop="404dp"
             android:background="@color/white" />
-    </LinearLayout>-->
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:layout_marginTop="275dp"
-        android:background="@drawable/button_marketplace"
-        app:layout_constraintTop_toBottomOf="@+id/buttonMarketplaceDescuentos"
-        tools:layout_editor_absoluteX="0dp" />
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/imageViewBuy1000Points"
