--- a/app/src/main/res/layout/activity_organization_coupons.xml
+++ b/app/src/main/res/layout/activity_organization_coupons.xml
@@ -39,7 +39,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/custom_button"
+        android:background="@color/colorPrimary"
         android:text="@string/create_new_coupon"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/custom_button"
+        android:background="@color/colorPrimary"
         android:text="@string/delete_coupon"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/buttonCreateNewCoupon"
