--- a/app/src/main/res/layout/activity_introduce_new_route_data.xml
+++ b/app/src/main/res/layout/activity_introduce_new_route_data.xml
@@ -45,11 +45,12 @@
                     android:layout_height="wrap_content"
                     android:text="@string/category_without_colon"
                     android:id="@+id/textView8"
-                    android:textSize="@dimen/text_field_label_font_size"
                     android:layout_marginTop="50dp"
                     android:layout_marginEnd="80dp"
                     android:layout_marginStart="25dp"
-                    android:fontFamily="@font/righteous"/>
+                    style="@style/LargeTextView"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="22dp"/>
 
             <RelativeLayout
                     android:layout_height="wrap_content"
@@ -74,9 +75,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30pt"
                 android:ellipsize="none"
-                android:fontFamily="@font/righteous"
                 android:text="@string/orderedRoute_switch"
-                android:textSize="@dimen/text_field_label_font_size" />
+                style="@style/LargeTextView"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="22dp"  />
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
