--- a/app/src/main/res/layout/activity_main_menu_organization.xml
+++ b/app/src/main/res/layout/activity_main_menu_organization.xml
@@ -12,11 +12,11 @@
             style="@style/LargeButtonText"
             android:textColor="@color/white"
             android:backgroundTint="@color/colorPrimary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="244dp"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="200dp"
             android:text="@string/crear_ruta_organizacion"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/LogOutOrg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
     />
@@ -24,13 +24,12 @@
     <Button
         android:id="@+id/LogOutOrg"
         style="@style/LargeButtonText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="230dp"
+        android:layout_height="40dp"
         android:layout_marginStart="162dp"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/colorAccent"
-        android:shadowColor="@color/colorPrimaryDark"
+        android:background="@drawable/custom_button"
         android:text="@string/log_out_organization"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,14 +54,15 @@
     <Button
         android:id="@+id/buttonOrganiDiscounts"
         style="@style/LargeButtonText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_width="220dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="32dp"
         android:background="@color/colorPrimary"
         android:text="Tus cupones"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/buttonCreateRouteOrg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
