--- a/app/src/main/res/layout/activity_modify_route.xml
+++ b/app/src/main/res/layout/activity_modify_route.xml
@@ -106,12 +106,13 @@
                         android:id="@+id/user_created_marker_button"
                         android:text="@string/create_new_point_of_interest_button"
                         android:layout_width="300dp"
-                        android:layout_height="42dp"
+                        android:layout_height="50dp"
                         android:layout_gravity="center"
                         style="@style/LargeButtonText"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:background="@drawable/custom_button2"
-                />
+                        android:textColor="@color/white"
+                        app:backgroundTint="@color/colorPrimary"
+                        android:layout_marginTop="14dp"
+                        app:layout_constraintTop_toBottomOf="@+id/user_created_marker_name_text_input" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
