--- a/app/src/main/res/layout/activity_route_information.xml
+++ b/app/src/main/res/layout/activity_route_information.xml
@@ -142,7 +142,7 @@
     <Button
         android:id="@+id/btn_routeInfo_back"
         style="@style/LargeButtonText"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/previous"
         android:textColor="@color/white"
@@ -157,13 +157,12 @@
     <Button
         android:id="@+id/btn_routeInfo_startRoute"
         style="@style/LargeButtonText"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/start_route"
         android:textColor="@color/white"
         app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.775"
+        android:layout_marginLeft="225dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listView_routeInfo_poiList" />
 
