--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -110,7 +110,7 @@
                                 android:id="@+id/textView_FollowersText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="followers" />
+                                android:text="Seguidores" />
 
                         </LinearLayout>
 
@@ -128,13 +128,14 @@
                                 android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="26dp"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:id="@+id/textView_FollowingText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="following" />
+                                android:text="Seguidos"
+                                />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -143,7 +144,7 @@
                             android:id="@+id/buttonLogOut"
                             android:background="@color/colorPrimary"
                             style="@style/LargeButtonText"
-                            android:layout_width="200dp"
+                            android:layout_width="175dp"
                             android:layout_height="50dp"
                             android:layout_marginTop="20dp"
                             android:layout_marginLeft="33dp"
