--- a/app/src/main/res/layout/fragment_route_search_result.xml
+++ b/app/src/main/res/layout/fragment_route_search_result.xml
@@ -8,24 +8,12 @@
         tools:context=".mainMenu.searcher.RouteSearchResultFragment"
         android:background="@color/background">
 
-    <Button
-            android:id="@+id/button_second"
-            android:layout_width="200dp"
-            android:layout_height="45dp"
-            android:layout_marginBottom="32dp"
-            android:text="@string/previous"
-            android:textColor="@color/white"
-            style="@style/LargeButtonText"
-            android:backgroundTint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.532"
-            app:layout_constraintStart_toStartOf="parent"/>
+
 
     <ListView
             android:id="@+id/listView_filteredRoutes"
-            android:layout_width="412dp"
-            android:layout_height="629dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/><![CDATA[
