--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:background="@drawable/side_nav_bar"
@@ -23,16 +24,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="0dp"
-        android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:text="PASEICO"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:fontFamily="@font/righteous"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:paddingTop="0dp"
+        android:text="@string/app_name_UpperCase"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/ruterEmail_textView"
+        android:layout_width="377dp"
         android:layout_height="wrap_content"
         android:text="Correo del usuario@misco.com" />
 </LinearLayout>
