Bug long name of routes cut off solved

--- a/app/src/main/res/layout/activity_route_information.xml
+++ b/app/src/main/res/layout/activity_route_information.xml
@@ -22,7 +22,7 @@
         android:id="@+id/textView_routeInfo_ordered"
         android:layout_width="126dp"
         android:layout_height="40dp"
-        android:layout_marginStart="248dp"
+        android:layout_marginStart="203dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,12 +33,10 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="58dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="40dp"
         android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/textView_routeInfo_themeText"
-        app:layout_constraintEnd_toStartOf="@+id/textView_routeInfo_nameOfRoute"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,7 +53,7 @@
         android:id="@+id/textView_routeInfo_length"
         android:layout_width="126dp"
         android:layout_height="40dp"
-        android:layout_marginStart="248dp"
+        android:layout_marginStart="202dp"
         android:layout_marginTop="22dp"
         android:ems="10"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +63,7 @@
         android:id="@+id/textView_routeInfo_theme"
         android:layout_width="126dp"
         android:layout_height="40dp"
-        android:layout_marginStart="244dp"
+        android:layout_marginStart="200dp"
         android:layout_marginTop="44dp"
         android:ems="10"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +73,7 @@
         android:id="@+id/textView_routeInfo_rewardPoints"
         android:layout_width="126dp"
         android:layout_height="40dp"
-        android:layout_marginStart="248dp"
+        android:layout_marginStart="202dp"
         android:layout_marginTop="26dp"
         android:ems="10"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +83,7 @@
         android:id="@+id/textView_routeInfo_estimatedTime"
         android:layout_width="126dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginLeft="202dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,15 +118,19 @@
 
     <TextView
         android:id="@+id/textView_routeInfo_nameOfRoute"
-        android:layout_width="197dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         style="@style/LargeTextView"
         android:textAlignment="center"
+        android:layout_marginStart="130dp"
+        android:layout_marginEnd="45dp"
         android:layout_marginTop="70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.831"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="22dp"
+        android:autoSizeTextType="uniform"/>
 
     <TextView
         android:id="@+id/textView_routeInfo_themeText"
