--- a/app/src/main/res/layout/activity_route_runner.xml
+++ b/app/src/main/res/layout/activity_route_runner.xml
@@ -31,27 +31,27 @@
 
     <TextView
         android:id="@+id/textViewTitleRoutingActivity"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="NOMBRE DE RUTA"
+        android:text="Nombre de la Ruta"
+        android:textSize="22dp"
         style="@style/LargeTextView"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autoSizeTextType="uniform"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="80dp"/>
 
     <ImageButton
         android:id="@+id/buttonCancelRoute"
         android:layout_width="43dp"
         android:layout_height="39dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="0dp"
         android:src="@android:drawable/ic_delete"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@android:drawable/ic_delete"
-        app:backgroundTint="@color/background"
-        style="@style/LargeButtonText"
-        android:textColor="@color/white"/>
+        tools:src="@android:drawable/ic_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
