--- a/app/src/main/res/layout/activity_route_runner_ordered.xml
+++ b/app/src/main/res/layout/activity_route_runner_ordered.xml
@@ -28,29 +28,33 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
     <TextView
         android:id="@+id/textViewTitleRoutingActivity"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="NOMBRE DE RUTA"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Nombre de la Ruta"
+        android:textSize="22dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/LargeTextView"
+        android:autoSizeTextType="uniform"
+        android:layout_marginStart="20dp"
+        android:textAlignment="center"
+        android:layout_marginEnd="80dp"/>
 
     <ImageButton
         android:id="@+id/buttonCancelRoute"
         android:layout_width="43dp"
         android:layout_height="39dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="15dp"
         android:src="@android:drawable/ic_delete"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@android:drawable/ic_delete" />
+        tools:src="@android:drawable/ic_delete"
+        android:layout_marginTop="0dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
