--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -44,7 +44,9 @@
                     android:text="Nombre Ruta"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:autoSizeTextType="uniform"
+                    android:layout_marginEnd="1dp"/>
 
                 <TextView
                     android:id="@+id/organizationNameText"
