--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -77,19 +77,35 @@
 
                 <TextView
                     android:id="@+id/routeDuration"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:paddingLeft="30dp"
                     android:paddingRight="0dp"
                     android:text="TextView"
+                    android:textAlignment="textEnd"
                     android:textColor="@color/colorPrimaryDark" />
 
                 <TextView
                     android:id="@+id/textView5"
+                    android:layout_width="41dp"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="0dp"
+                    android:text="h" />
+
+                <TextView
+                    android:id="@+id/routeMinutes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="0dp"
+                    android:text="m"
+                    android:textAlignment="textEnd" />
+
+                <TextView
+                    android:id="@+id/textView15"
                     android:layout_width="61dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="0dp"
-                    android:text="minutos" />
+                    android:text="min" />
             </TableRow>
 
             <TableRow
@@ -107,15 +123,31 @@
 
                 <TextView
                     android:id="@+id/routeLenght"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:paddingLeft="30dp"
                     android:paddingRight="0dp"
                     android:text="TextView"
+                    android:textAlignment="textEnd"
                     android:textColor="@color/colorPrimaryDark" />
 
                 <TextView
                     android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="0dp"
+                    android:text="@string/km" />
+
+                <TextView
+                    android:id="@+id/meters_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="0dp"
+                    android:text="m"
+                    android:textAlignment="textEnd" />
+
+                <TextView
+                    android:id="@+id/textView17"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="0dp"
