--- a/app/src/main/res/layout/activity_route_finished.xml
+++ b/app/src/main/res/layout/activity_route_finished.xml
@@ -23,7 +23,7 @@ android:background="@drawable/geometrics_cut">
         android:id="@+id/textViewTemporalMenuName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:text="NOMBRE DE RUTA"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@ android:background="@drawable/geometrics_cut">
         android:id="@+id/textViewRouteFinishedPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="30dp"
         android:text="Puntos : XX"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -62,11 +62,25 @@ android:background="@drawable/geometrics_cut">
         android:backgroundTint="@color/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="80dp"
         android:text="Volver al menú principal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="280dp"
+        android:layout_height="250dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonTemporalMenuStartRoute"
+        android:layout_marginBottom="90dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="anim_finished.json"
+        app:lottie_loop="true"
+        tools:layout_editor_absoluteY="356dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
