--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,7 @@
 
     <EditText
         android:id="@+id/editTextPasswordConf"
+        android:textSize="20sp"
         android:layout_width="260dp"
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
@@ -21,6 +22,7 @@
 
     <EditText
         android:id="@+id/editTextPassword"
+        android:textSize="20sp"
         android:layout_width="260dp"
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
@@ -33,6 +35,7 @@
 
     <EditText
         android:id="@+id/editTextUsername"
+        android:textSize="20sp"
         android:layout_width="260dp"
         android:layout_height="45dp"
         android:layout_marginTop="150dp"
@@ -45,6 +48,7 @@
 
     <EditText
         android:id="@+id/editTextName"
+        android:textSize="20sp"
         android:layout_width="260dp"
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
@@ -57,6 +61,7 @@
 
     <EditText
         android:id="@+id/editTextSurname"
+        android:textSize="20sp"
         android:layout_width="260dp"
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
@@ -69,6 +74,7 @@
 
     <EditText
         android:id="@+id/editTextEmail"
+        android:textSize="20sp"
         android:layout_width="260dp"
         android:layout_height="45dp"
         android:layout_marginTop="25dp"
