--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -161,14 +161,15 @@
                 android:padding="12dp">
 
                 <TextView
-                    android:id="@+id/fullname"
-                    android:paddingStart="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
+                    android:id="@+id/fullname"
+                    android:paddingStart="15dp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="26dp"
-                    android:textStyle="bold" />
+                    />
             </LinearLayout>
 
             <LinearLayout
