--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -7,7 +7,9 @@
     android:background="@drawable/layout_bg"
     android:gravity="center"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginStart="0dp"
+    android:layout_marginEnd="16dp">
 
     <LinearLayout
         android:layout_width="400dp"
