--- a/app/src/main/res/layout/fragment_route_search_result.xml
+++ b/app/src/main/res/layout/fragment_route_search_result.xml
@@ -16,7 +16,11 @@
             android:layout_height="fill_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/><![CDATA[
+            app:layout_constraintTop_toTopOf="parent"
+            android:divider = "@color/background"
+            android:dividerHeight = "16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/><![CDATA[
 
     />
 ]]>
