--- a/app/src/main/res/layout/fragment_user_routes_list.xml
+++ b/app/src/main/res/layout/fragment_user_routes_list.xml
@@ -15,6 +15,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        android:divider = "@color/background"
+        android:dividerHeight = "16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
