Mostrar informacion en directo del coste de la ruta

--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -18,6 +18,7 @@
             android:textColor="@color/white"
             style="@style/LargeButtonText"/>
 
+
     <fragment
             android:id="@+id/new_route_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -71,7 +72,7 @@
                         android:background="@drawable/custom_button2"
                 />
                 <TextView
-                        android:text="TextView"
+                        android:text="COSTE"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/MediumTextView"
@@ -112,6 +113,7 @@
         android:clickable="false"
         android:text="@string/poiDown_button"
         android:visibility="invisible" />
+
     <TextView
             android:text="@string/puntos_map_TextView"
             android:textStyle="bold"
@@ -131,5 +133,26 @@
             android:layout_marginLeft="135pt"
             android:layout_marginTop="25pt"
             android:id="@+id/availablePoints"/>
+
+    <TextView
+            android:text="COSTE"
+            style="@style/MediumTextView"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:layout_gravity="bottom|right"
+            android:id="@+id/acumulatedCost"/>
+    <TextView
+            android:text="COSTE"
+            android:textStyle="bold"
+            android:layout_width="72dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_gravity="bottom|right"
+            android:id="@+id/titleAcumulated"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
