Eliminado la informacion de puntos en caso de ser Organizacion

--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="135pt"
             android:layout_marginTop="35pt"
-            android:id="@+id/textView12"/>
+            android:id="@+id/availablePointsTitle"/>
 
     <TextView
             android:text="@string/puntos_map_TextView"
