--- a/app/src/main/res/layout/activity_route_runner.xml
+++ b/app/src/main/res/layout/activity_route_runner.xml
@@ -11,47 +11,49 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/TextNextRoute"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitleRoutingActivity"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".MainActivity" />
-
 
 
     <ListView
         android:id="@+id/TextNextRoute"
         android:layout_width="0dp"
         android:layout_height="150dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/background"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textViewTitleRoutingActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Nombre de la Ruta"
-        android:textSize="22dp"
         style="@style/LargeTextView"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
         android:autoSizeTextType="uniform"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="80dp"/>
+        android:text="Nombre de la Ruta"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/buttonCancelRoute"
         android:layout_width="43dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="0dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:src="@android:drawable/ic_delete"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@android:drawable/ic_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
